# boe-rag-project

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
data/: test_set.csv
data/evaluation_results/: baseline_results.json  comparison_table.csv  crag_metrics.json  enhanced_results.json  evaluator_divergence_baseline.csv  evaluator_divergence_enhanced.csv  per_category.csv  pre_flight_scope_check.json  ragas_aggregate.json  ragas_baseline.jsonl  ragas_baseline_sonnet_check.jsonl  ragas_enhanced.jsonl  ragas_enhanced_sonnet_check.jsonl
data/raw/: manifest.csv
docs/: 00-MASTER.md  01-PROJECT-SETUP.md  02-DATA-INGESTION.md  03-CHUNKING.md  04-INDEXING.md  05-BASELINE-PIPELINE.md  06-ENHANCED-PIPELINE.md  07-EVALUATION.md  08-REPORT.md  09-DEMO-LOG.md  10-PACKAGING.md
docs/extensions/: A1-langsmith-tracing.md  A2-fastapi-service.md  A3-response-cache.md  A4-docker.md  A5-sonnet-consistency-check.md  B1-fix-q21-abstain.md  B2-expand-test-set.md  README.md  notebook-population-plan.md  report-content-plan.md
notebooks/: 01_data_ingestion_indexing.ipynb  02_baseline_and_enhanced.ipynb  03_evaluation.ipynb
scripts/: build_nb1.py  build_nb2.py  build_nb3.py  build_report_pdf.py  check_corpus_scope.py  compare_evaluators.py  run_eval.py  run_ragas.py  verify_abstain_delta.py
service/: __init__.py  auth.py  main.py  schemas.py
src/boe_rag/: __init__.py  config.py  models.py
tests/: conftest.py  test_observability.py
tests/cache/: test_disk_cache.py
tests/chunking/: test_base_chunker.py  test_metadata.py  (+5 more)
(+117 files in other folders)
