[project]
name = "boe-rag"
version = "0.1.0"
description = "Corrective RAG system for Bank of England policy documents"
requires-python = ">=3.11"

dependencies = [
    # Core LLM + orchestration
    "anthropic",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "langgraph",

    # Retrieval & storage
    "chromadb",
    "openai",
    "cohere",

    # Evaluation
    "ragas",
    "datasets",

    # Tokenisation
    "tiktoken",

    # Data ingestion
    "beautifulsoup4",
    "requests",
    "lxml",

    # Utilities
    "python-dotenv",
    "pandas",
    "tqdm",
    "scipy",
    "diskcache",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jupyter",
    "ipykernel",
    "ruff",
]
service = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
